Add streaming format selection to GUI

--- a/LocalAudioBroadcast/app.config
+++ b/LocalAudioBroadcast/app.config
@@ -26,6 +26,9 @@ limitations under the License.
             <setting name="PreferredRenderer" serializeAs="String">
                 <value />
             </setting>
+            <setting name="StreamingFormat" serializeAs="String">
+                <value />
+            </setting>
         </LocalAudioBroadcast.Properties.Settings>
     </userSettings>
 </configuration>
