--- a/LocalAudioBroadcast/Properties/Settings.settings
+++ b/LocalAudioBroadcast/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="PreferredRenderer" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="StreamingFormat" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
