Add DLNA compatibility
Previously, SetAVTransportURI did not send any CurrentURIMetaData which is optional by the UPnP specifications, but mandatory by the DLNA specifications. With this change the metadata is now always included, extending compatibility to strict DLNA devices. This fixes GitHub issue #1 for real.

--- a/LocalAudioBroadcast/LocalAudioBroadcast.csproj
+++ b/LocalAudioBroadcast/LocalAudioBroadcast.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Data\IInputTransform.cs" />
     <Compile Include="Data\StreamingFormatTransform.cs" />
     <Compile Include="DidlUtil.cs" />
+    <Compile Include="Directory.cs" />
     <Compile Include="DvConnectionManager.cs" />
     <Compile Include="DvContentDirectory.cs" />
     <Compile Include="DvX_MS_MediaReceiverRegistrar.cs" />
