Reflect state changes in UI
This commit adds an event handler to process state changes in volume, muting, and playback state. This makes the application aware of external changes, not just its own actions.

--- a/LocalAudioBroadcast/LocalAudioBroadcast.csproj
+++ b/LocalAudioBroadcast/LocalAudioBroadcast.csproj
@@ -135,6 +135,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="DirectoryServer.cs" />
+    <Compile Include="ServiceEventHandler.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Metadata\Spotify.cs" />
     <Compile Include="Metadata\TrackInfo.cs" />
